# Swift-Detr

./: .gitignore  README.md  evaluate_fixed.py  finetune.py  pyproject.toml  train.py
configs/: swiftdetr_base.yaml  swiftdetr_small.yaml  swiftdetr_tiny.yaml
rfdetrv2/: __init__.py  config.py  detr.py  engine.py  main.py
rfdetrv2/cli/: main.py
rfdetrv2/models/: lwdetr_prototype.py
rfdetrv2/models/backbone/: __init__.py  backbone.py  swiftnet_backbone.py
rfdetrv2/util/: http_download.py  rfdetr_pretrained.py  swiftnet_pretrained.py
scripts/: count_model_params.py  evaluate.py  inference.py  inference_video.py  model_stats.py  run_train_supervised.sh  train_supervised.py  visualize_attention.py  visualize_prototype_rope2d.py
src/swiftdetr/: _namespace.py  config.py  detr.py  inference.py
src/swiftdetr/assets/: __init__.py  model_weights.py
src/swiftdetr/datasets/: __init__.py  transforms.py
src/swiftdetr/evaluation/: __init__.py  coco_eval.py  f1_sweep.py  matching.py
src/swiftdetr/models/: __init__.py  (+6 more)
swiftdetr/: __init__.py  _namespace.py  inference.py  variants.py
swiftdetr/assets/: coco_classes.py
swiftdetr/datasets/: _develop.py  aug_config.py  coco.py  kornia_transforms.py  o365.py  save_grids.py  synthetic.py  yolo.py
swiftdetr/models/: _defaults.py  criterion.py  math.py  postprocess.py  transformer.py
swiftdetr/training/: auto_batch.py  cli.py  module_data.py  module_model.py
swiftdetr/util/: __init__.py  box_ops.py  decorators.py  files.py  package.py  reproducibility.py  tensors.py
tests/: test_swiftnet_pretrained_local.py
(+37 files in other folders)
